@@ -16,6 +16,7 @@
 // You should have received a copy of the GNU General Public License
 // along with this program.  If not, see <http://www.gnu.org/licenses/>.
 //
+//
 
 #include "boost/test/unit_test.hpp"
 #include "starling_continuous_variant_caller.hh"
