@@ -1,3 +1,4 @@
+- STREL-321 fix rare shared variant prefix issue in multi-sample analysis
 - STREL-322 fix VCF namespace conflict on INFO/EVS
 - STREL-200 Adjust mito strand-bias for consistency with autosomes
 - STREL-319 Sync RNA-seq EVS feature names with DNA changes
